2010-05-12 17:41  rsbivand

	* R/gwr.R: error on non-numeric adapt in gwr

2010-05-11 19:10  rsbivand

	* R/gwr.R, ChangeLog, inst/ChangeLog: adding quasi-global R2

2010-05-11 19:03  rsbivand

	* DESCRIPTION, R/gwr.R, ChangeLog, inst/ChangeLog: adding
	  quasi-global R2

2010-04-03 21:23  rsbivand

	* ChangeLog, inst/ChangeLog: maptools gpclib changes

2010-04-03 20:58  rsbivand

	* DESCRIPTION, man/gw.cov.Rd, man/gwr.Rd: maptools gpclib changes

2010-03-22 15:32  rsbivand

	* DESCRIPTION, R/gwr.R: add timing

2010-03-22 14:53  rsbivand

	* DESCRIPTION, R/gwr.R, ChangeLog, inst/ChangeLog: fix cluster bug

2010-03-22 13:36  rsbivand

	* R/gwr.R: fix cluster bug

2010-02-03 15:47  rsbivand

	* INDEX: adding tricube

2010-02-03 15:30  rsbivand

	* ChangeLog, inst/ChangeLog: adding tricube

2010-02-03 15:22  rsbivand

	* DESCRIPTION, R/tricube.R, man/gwr.tricube.Rd: adding tricube

2009-06-29 14:15  rsbivand

	* DESCRIPTION, R/gwr.R, ChangeLog, inst/ChangeLog: changed text in
	  gwr print method

2009-06-24 13:03  rsbivand

	* DESCRIPTION, R/gwr.R, man/ggwr.Rd, man/gwr.cv.Rd, ChangeLog:
	  updated localR2 to GWR4

2009-06-23 14:08  rsbivand

	* R/gwr.R: firmed up local R2

2009-06-22 22:38  rsbivand

	* DESCRIPTION, R/gwr.R, man/LMZ.F3GWR.test.Rd, man/gwr.Rd,
	  ChangeLog, inst/ChangeLog: changed SE to use CC^t, added EDF SE

2009-06-18 13:42  rsbivand

	* DESCRIPTION, R/gwr.R, R/gwr.whole.test.R, man/LMZ.F3GWR.test.Rd,
	  ChangeLog, inst/ChangeLog: checking against GWR3.0.1

2009-06-05 15:44  rsbivand

	* DESCRIPTION, R/gwr.cv.R, R/gwr1.cv.R, man/ggwr.sel.Rd,
	  man/gwr.cv.Rd: pass tol= to optimize

2009-06-05 14:39  rsbivand

	* ChangeLog, DESCRIPTION, inst/ChangeLog: tidy

2009-05-31 20:24  rsbivand

	* DESCRIPTION, R/gwr.R, man/gwr.Rd, ChangeLog, inst/ChangeLog:
	  adding prediction to gwr()

2009-05-29 15:54  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2009-05-29 13:40  rsbivand

	* DESCRIPTION: don't assign residuals when fit points given
